[gd_scene load_steps=58 format=2]

[ext_resource path="res://Characters/Rhodes/Assets/rhodesspritesheeta.png" type="Texture" id=1]
[ext_resource path="res://Characters/Rhodes/TestCharacter2.gd" type="Script" id=2]
[ext_resource path="res://Characters/Shared/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/StatusIcon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Characters/Shared/BulletSpawner.tscn" type="PackedScene" id=5]

[sub_resource type="BoxShape" id=11]
extents = Vector3( 0.605, 0.175, 1.14 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle_d"
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle_u"
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=19]
resource_name = "roll_d"
length = 0.583333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13 ]
}

[sub_resource type="Animation" id=20]
resource_name = "roll_lr"
length = 0.583333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=18]
resource_name = "roll_u"
length = 0.583333
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18 ]
}

[sub_resource type="Animation" id=14]
resource_name = "run_d"
length = 0.666667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 34, 35, 36, 37 ]
}

[sub_resource type="Animation" id=16]
resource_name = "run_lr"
length = 0.666667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=15]
resource_name = "run_u"
length = 0.666667
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.166667, 0.333333, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 29, 30, 31, 32 ]
}

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "idle_d"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "idle_u"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "roll_d"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "roll_lr"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "roll_u"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "run_d"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "run_lr"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "run_u"

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=48]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=49]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=50]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=51]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachine" id=9]
states/idle_d/node = SubResource( 21 )
states/idle_d/position = Vector2( 244, 200 )
states/idle_u/node = SubResource( 5 )
states/idle_u/position = Vector2( 244, 116 )
states/roll_d/node = SubResource( 22 )
states/roll_d/position = Vector2( 668, 437 )
states/roll_lr/node = SubResource( 23 )
states/roll_lr/position = Vector2( 915, 263 )
states/roll_u/node = SubResource( 24 )
states/roll_u/position = Vector2( 840, 387 )
states/run_d/node = SubResource( 25 )
states/run_d/position = Vector2( 622, 89 )
states/run_lr/node = SubResource( 26 )
states/run_lr/position = Vector2( 699, 14 )
states/run_u/node = SubResource( 27 )
states/run_u/position = Vector2( 547, 14 )
transitions = [ "idle_u", "run_u", SubResource( 28 ), "idle_u", "run_d", SubResource( 29 ), "idle_u", "run_lr", SubResource( 30 ), "run_u", "idle_u", SubResource( 31 ), "run_d", "idle_u", SubResource( 32 ), "run_lr", "idle_u", SubResource( 33 ), "idle_d", "run_u", SubResource( 34 ), "idle_d", "run_d", SubResource( 35 ), "idle_d", "run_lr", SubResource( 36 ), "run_u", "idle_d", SubResource( 37 ), "run_d", "idle_d", SubResource( 38 ), "run_lr", "idle_d", SubResource( 39 ), "idle_u", "roll_u", SubResource( 40 ), "idle_u", "roll_lr", SubResource( 41 ), "idle_u", "roll_d", SubResource( 42 ), "idle_d", "roll_u", SubResource( 43 ), "idle_d", "roll_lr", SubResource( 44 ), "idle_d", "roll_d", SubResource( 45 ), "roll_u", "idle_u", SubResource( 46 ), "roll_lr", "idle_u", SubResource( 47 ), "roll_d", "idle_u", SubResource( 48 ), "roll_u", "idle_d", SubResource( 49 ), "roll_lr", "idle_d", SubResource( 50 ), "roll_d", "idle_d", SubResource( 51 ), "run_u", "roll_u", SubResource( 52 ), "run_d", "roll_d", SubResource( 53 ), "run_lr", "roll_lr", SubResource( 54 ), "run_lr", "roll_u", SubResource( 55 ), "run_lr", "roll_d", SubResource( 56 ), "run_u", "roll_lr", SubResource( 57 ), "run_d", "roll_lr", SubResource( 58 ) ]
start_node = "idle_d"
graph_offset = Vector2( -125, 15 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1, 1.08064, 1 )

[node name="Calliope2" type="KinematicBody"]
collision_layer = 2
collision_mask = 5
collision/safe_margin = 1.0
script = ExtResource( 2 )
hp = 200
dex = 0.9
magsize = 2
weap_damage_min = 5
weap_damage_max = 8

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.047211, 0 )
shape = SubResource( 11 )
disabled = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.35, 0 )
cast_shadow = 0
billboard = 1
texture = ExtResource( 1 )
hframes = 12
vframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite3D")
anims/RESET = SubResource( 13 )
anims/idle_d = SubResource( 2 )
anims/idle_u = SubResource( 4 )
anims/roll_d = SubResource( 19 )
anims/roll_lr = SubResource( 20 )
anims/roll_u = SubResource( 18 )
anims/run_d = SubResource( 14 )
anims/run_lr = SubResource( 16 )
anims/run_u = SubResource( 15 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 10 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
transform = Transform( 1.02493, 0, 0, 0, 1, 0, 0, 0, 0.650145, 0, 0, 0 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" parent="HitBox" index="0"]
transform = Transform( 0.643798, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 12 )
disabled = true

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform( 1.6, 0, 0, 0, -6.99382e-08, -1.6, 0, 1.6, -6.99382e-08, 0, -1.18144, 0 )
modulate = Color( 0, 0, 0, 1 )
shaded = true
alpha_cut = 2

[node name="Spawner" parent="." instance=ExtResource( 5 )]
spread_count = 5
spread_angle = 25.0
random = true
bullet_speed_override_range = Vector2( 25, 35 )

[node name="AbilitySpawner" parent="." instance=ExtResource( 5 )]
ammocount = -1
uses_ammo = false
cooldown = 2.0
bullet_speed_override = 20.0

[node name="Node2D" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]

[editable path="HitBox"]
[editable path="Spawner"]
[editable path="AbilitySpawner"]
